[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/assets/buttons/small/red/button_red_small.tres" type="Theme" id=1]
[ext_resource path="res://ui/assets/fonts/font_small_button.tres" type="FontFile" id=2]
[ext_resource path="res://ui/assets/buttons/big/yellow/button_yellow_big.tres" type="Theme" id=3]
[ext_resource path="res://ui/assets/fonts/data/kenney_thick.ttf" type="FontFile" id=4]
[ext_resource path="res://ui/assets/panels/panel_white_small.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/standalone/login/login.gd" type="Script" id=6]
[ext_resource path="res://ui/assets/buttons/big/green/button_green_big.tres" type="Theme" id=7]
[ext_resource path="res://ui/assets/general/form_theme.tres" type="Theme" id=8]
[ext_resource path="res://ui/assets/panels/metal/panel_yellow_metal.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/assets/panels/metal_dark/panel_yellow_metal_dark.tres" type="StyleBox" id=10]
[ext_resource path="res://ui/assets/general/general_ui.tres" type="Theme" id=11]

[sub_resource type="FontFile" id=3]
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 4 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = 100.2
offset_top = -50.0
offset_right = -99.8
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PanelGuest" type="PanelContainer" parent="VBoxContainer"]
offset_top = 61.0
offset_right = 414.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxGuest" type="VBoxContainer" parent="VBoxContainer/PanelGuest"]
offset_left = 20.0
offset_top = 20.0
offset_right = 394.0
offset_bottom = 106.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblGuest" type="Label" parent="VBoxContainer/PanelGuest/BoxGuest"]
offset_right = 374.0
offset_bottom = 2.0
theme = ExtResource( 8 )
text = "Play as guest"

[node name="LineUsernameGuest" type="LineEdit" parent="VBoxContainer/PanelGuest/BoxGuest"]
offset_top = 6.0
offset_right = 374.0
offset_bottom = 18.0
theme = ExtResource( 8 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
placeholder_text = "Enter a Username"
caret_blink = true

[node name="BtnLoginGuest" type="Button" parent="VBoxContainer/PanelGuest/BoxGuest"]
offset_left = 111.0
offset_top = 22.0
offset_right = 262.0
offset_bottom = 86.0
size_flags_horizontal = 4
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "guest login"

[node name="LblOr" type="Label" parent="VBoxContainer"]
offset_top = 191.0
offset_right = 414.0
offset_bottom = 209.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 3 )
text = "OR"
align = 1
valign = 1

[node name="PanelEmail" type="PanelContainer" parent="VBoxContainer"]
offset_top = 213.0
offset_right = 414.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxEmail" type="VBoxContainer" parent="VBoxContainer/PanelEmail"]
offset_left = 20.0
offset_top = 20.0
offset_right = 394.0
offset_bottom = 166.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblLogin" type="Label" parent="VBoxContainer/PanelEmail/BoxEmail"]
offset_right = 374.0
offset_bottom = 18.0
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "login"

[node name="LineEmail" type="LineEdit" parent="VBoxContainer/PanelEmail/BoxEmail"]
offset_top = 22.0
offset_right = 374.0
offset_bottom = 48.0
theme = ExtResource( 8 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_styles/normal = ExtResource( 5 )
text = "lerrrtaste@protonmail.com"
placeholder_text = "Email"
caret_blink = true

[node name="LinePassword" type="LineEdit" parent="VBoxContainer/PanelEmail/BoxEmail"]
offset_top = 52.0
offset_right = 374.0
offset_bottom = 78.0
theme = ExtResource( 8 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_styles/normal = ExtResource( 5 )
text = "Passw0rd"
secret = true
placeholder_text = "Password"
caret_blink = true

[node name="LinePasswordConfirm" type="LineEdit" parent="VBoxContainer/PanelEmail/BoxEmail"]
visible = false
offset_top = 160.0
offset_right = 374.0
offset_bottom = 202.0
theme = ExtResource( 8 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_styles/normal = ExtResource( 5 )
secret = true
placeholder_text = "Confirm Password"
caret_blink = true

[node name="LineUsernameRegister" type="LineEdit" parent="VBoxContainer/PanelEmail/BoxEmail"]
visible = false
offset_top = 114.0
offset_right = 374.0
offset_bottom = 156.0
theme = ExtResource( 8 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_styles/normal = ExtResource( 5 )
placeholder_text = "Choose a Username"
caret_blink = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/PanelEmail/BoxEmail"]
offset_top = 82.0
offset_right = 374.0
offset_bottom = 146.0

[node name="BtnLoginEmail" type="Button" parent="VBoxContainer/PanelEmail/BoxEmail/HSplitContainer"]
offset_right = 181.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "  Login  "

[node name="BtnRegister" type="Button" parent="VBoxContainer/PanelEmail/BoxEmail/HSplitContainer"]
offset_left = 221.0
offset_right = 345.0
offset_bottom = 64.0
size_flags_horizontal = 6
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
text = "Register"

[node name="BtnCancel" type="Button" parent="VBoxContainer/PanelEmail/BoxEmail"]
visible = false
offset_left = 140.0
offset_top = 186.0
offset_right = 234.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/PanelGuest/BoxGuest/BtnLoginGuest" to="." method="_on_BtnLoginGuest_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelEmail/BoxEmail/HSplitContainer/BtnLoginEmail" to="." method="_on_BtnLoginEmail_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelEmail/BoxEmail/HSplitContainer/BtnRegister" to="." method="_on_BtnRegister_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelEmail/BoxEmail/BtnCancel" to="." method="_on_BtnCancel_pressed"]
